# csv-mp

./: .gitignore  README.md  benchmark_comparativo.py
csv-mp/: CSV-MP-Specification.md  README.md  SIMPLE-API-GUIDE.md
csv-mp/csharp/: README.md
csv-mp/csharp/examples/: SimpleApiExamples.cs  SomaService.cs  SomaService.csproj
csv-mp/csharp/src/: CsvMp.cs
csv-mp/csharp/src/CsvMp/: CsvMp.csproj
csv-mp/csharp/src/CsvMp/Parser/: CsvMpParser.cs
csv-mp/csharp/src/CsvMp/Types/: BaseTypes.cs  Exceptions.cs  Models.cs
csv-mp/python/: pyproject.toml
csv-mp/python/examples/: SOMA_SERVICE.md  simple_api.py  soma_service.py
csv-mp/python/src/: __init__.py  csvmp_types.py  parser.py  serializer.py  types.py
csv-mp/python/tests/: test_benchmark.py
csv-mp/typescript/: package.json
csv-mp/typescript/examples/: simple-api.ts
csv-mp/typescript/src/: index.ts  parser.ts  types.ts
docs/: soma-service.md
